--- a/src/components/details/purchases/purchases.css
+++ b/src/components/details/purchases/purchases.css
@@ -118,3 +118,7 @@
   width: 20%;
   padding: 5px 0;
 }
+
+.purchases-table table > ::-webkit-scrollbar-thumb {
+  border: 2px solid white;
+}
